Bug 567357 - Fire a DOMWindowCreated event which matches the observer-service notification in bug 549539 so that extensions/message-manager scripts can add DOM features before any content script runs, r=sicking